--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <i class="fa-solid fa-bars fa-lg" style="color:#EC550F"></i>
             </div>
             <div class="logo">
-                <img id="logo" src="pics/Logo/profileLogo.png" alt="Website Logo">
+                <img id="logo" src="/profileLogo.png" alt="Website Logo">
             </div>
             <nav class="navBar">   
                 <a id="aboutLink" href="#">About</a>
