--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="navigation">
             <div style="font-size: 2rem;" class="hamBurger">
-                <i class="fa-solid fa-bars fa-lg" style="color:#EC550F" action="buttonClick()"></i>
+                <i id="hamButton" class="fa-solid fa-bars fa-lg" style="color:#EC550F"  onclick="buttonClick()"></i>
             </div>
             <div class="logo">
                 <img id="logo" src="profileLogo.png" alt="Website Logo">
