--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="logo">
                 <img id="logo" src="profileLogo.png" alt="Website Logo">
             </div>
-            <nav class="navBar" id="navID">   
+            <nav class="navBar" id="navID menuoff">   
                 <a id="aboutLink" href="#">About</a>
                 <a id="projectsLink" href="#">Projects</a>
                 <a id="contactLink" href="#">Contact</a>
