Adding hero section

--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
                 <a id="projectsLink" href="#">Projects</a>
                 <a id="contactLink" href="#">Contact</a>
                 <a id="downloadCV" href="#">Download CV</a>
-            </nav>
-        
-
-            
+            </nav>    
         </div>
-
+        <div class="heroArea">
+            <span>Hello ! I'm Kanishk Raj</span>
+        </div>
     </div>
 </body>
 <script src="script.js"></script>
